Fix weird scrollbars

--- a/src/components/Application.css
+++ b/src/components/Application.css
@@ -5,15 +5,21 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-.daltonize {
+.daltonize-ui {
   position: fixed;
   top: 0;
   left: 0;
-  /*width: 100vw;
-  height: 100vh;*/
   bottom: 0;
   right: 0;
   overflow: hidden;
+}
+
+.daltonize {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .flip-x {
